<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/login_icon" />

        <EditText
            android:id="@+id/signup_name"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_contact"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/contact"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <EditText
            android:id="@+id/signup_confirm_password"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <EditText
            android:editable="false"
            android:id="@+id/signup_date_of_birth"
            style="@style/edit_white_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/date_of_birth" />

        <RadioGroup
            android:id="@+id/signup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/signup_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                android:textColor="@color/white_transparent_70"
                app:buttonTint="@color/white_transparent_70" />

            <RadioButton
                android:id="@+id/signup_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                android:textColor="@color/white_transparent_70"
                app:buttonTint="@color/white_transparent_70" />

        </RadioGroup>

        <Spinner
            android:id="@+id/signup_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white_transparent_70" />

        <Button
            android:id="@+id/signup_button"
            style="@style/button_18_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_30sdp"
            android:text="@string/signup" />

    </LinearLayout>

</ScrollView>